--- a/deployTool/packages.config
+++ b/deployTool/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="LibGit2Sharp" version="0.24.0" targetFramework="net452" />
-  <package id="LibGit2Sharp.NativeBinaries" version="1.0.185" targetFramework="net452" />
+  <package id="LibGit2Sharp-SSH" version="1.0.22" targetFramework="net452" />
+  <package id="LibGit2Sharp-SSH.NativeBinaries" version="1.0.14" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net452" />
