--- a/deployTool/packages.config
+++ b/deployTool/packages.config
@@ -9,5 +9,7 @@
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.6" targetFramework="net452" />
   <package id="Microsoft.Net.Compilers" version="2.3.1" targetFramework="net452" developmentDependency="true" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net452" />
+  <package id="NLog" version="4.4.2" targetFramework="net452" />
+  <package id="NLog.Web" version="4.5.0" targetFramework="net452" />
   <package id="YamlDotNet" version="4.2.1" targetFramework="net452" />
 </packages>
